radware/mikeb/day3-lab1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-bear
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx
  rules:
  - host: animals.52.51.119.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: bear-svc
             port:
                number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-moose
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"

spec:
  ingressClassName: nginx
  rules:

  - host: animals.52.51.119.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: moose-svc
             port:
                number: 80
